--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,8 +12,8 @@
     tools:context="com.example.dishantkaushik.movieapp.MainActivity"
     tools:showIn="@layout/activity_main">
     <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/images_view">
 
     </android.support.v7.widget.RecyclerView>
